--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       return (
         <div>
           <h3>total clicks: 0</h3>
-          <button>click me</button>
+          <button>click me!</button>
         </div>
       );
     }
